--- a/CloudFormation/template.yaml
+++ b/CloudFormation/template.yaml
@@ -7,22 +7,20 @@ Metadata:
         Label:
           default: 'IAM Roles'
         Parameters:
-          - CreateCloudFormationStackSetRoles
-          - CreateSystemsManagerRoles
+          - IsDelegatedAdministrator
           - DeploymentTargets
       - 
         Label: 
           default: 'Automation details'
         Parameters: 
           - ManagementAccountId
+          - DelegatedAdminAccountId
           - TargetOUs
           - TargetKey
           - TargetValues
     ParameterLabels:
-      CreateCloudFormationStackSetRoles:
-        default: 'CreateCloudFormationStackSetRoles'
-      CreateSystemsManagerRoles:
-        default: 'CreateSystemsManagerRoles'
+      IsDelegatedAdministrator:
+        default: 'IsDelegatedAdministrator'
       DeploymentTargets:
         default: 'DeploymentTargets'
       ManagementAccountId:
@@ -35,18 +33,12 @@ Metadata:
         default: 'TargetValues'
 
 Parameters:
-  CreateCloudFormationStackSetRoles:
+  IsDelegatedAdministrator:
     Type: String
     AllowedValues:
     - 'true'
     - 'false'
-    Description: Specify if the CloudFormation StackSet IAM roles should be provisioned, these roles will be used to deploy AWS-SystemsManager-AutomationExecutionRole in each of the target accounts. Refer to https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/stacksets-prereqs.html for more details.
-  CreateSystemsManagerRoles:
-    Type: String
-    AllowedValues:
-    - 'true'
-    - 'false'
-    Description: Specify if the AWS Systems Manager IAM roles required to run automation in multiple accounts and regions should be provisioned. Refer to https://docs.aws.amazon.com/systems-manager/latest/userguide/systems-manager-automation-multiple-accounts-and-regions.html for more details.
+    Description: Specify if this solution is being deployed in a delegated adminstrator account. With this option you no longer need to be logged into the AWS Organizations management account to administer software package distribution.
   DeploymentTargets:
     Description: Specify the AWS OrganizationalUnitIds, for eg. ou-abc1-abc12ab1,ou-def2-def12de1
     Type: CommaDelimitedList
@@ -62,15 +54,15 @@ Parameters:
     Description: (Required) AWS Organization's Management account ID.
     Type: String
     Default: '123456789012'
+  DelegatedAdminAccountId:
+    Description: (Optional) Delegated administrator account ID.
+    Type: String
+    Default: '123456789012'
 
 Conditions:
-  CreateSystemsManagerRoles:
+  IsDelegatedAdministrator:
     Fn::Equals:
-    - Ref: CreateSystemsManagerRoles
-    - 'true'
-  CreateCloudFormationStackSetRoles:
-    Fn::Equals:
-    - Ref: CreateCloudFormationStackSetRoles
+    - Ref: IsDelegatedAdministrator
     - 'true'
 
 Resources:
@@ -118,7 +110,7 @@ Resources:
               },
               "AutomationAssumeRole" : {
                 "type" : "String",
-                "description" : "The IAM role required to execute this document, by default use AWS-SystemsManager-AutomationAdministrationRole"
+                "description" : "The IAM role required to execute this document, by default use CSD-SystemsManager-AutomationAdministrationRole"
               },
               "bucketName" : {
                 "type" : "String",
@@ -187,7 +179,7 @@ Resources:
               "inputs" : {
                 "Runtime" : "python3.7",
                 "Handler" : "script_handler",
-                "Script" : "import sys\nimport boto3\nimport json\nimport botocore\n\ndef script_handler(events, context):\n  client = boto3.client('ssm')\n  \n  automationAssumeRole = events['automationAssumeRole']\n  documentName = 'CSD-DistributeSoftwarePackage'\n  instanceId = events['instanceId']\n  action = events['action']\n  installationType = events['installationType']\n  version = events['version']\n  additionalArguments = events['additionalArguments']\n  targets = events['targets']\n  targetAccounts = events['targetAccounts']\n  targetRegions = events['targetRegions']\n  maxConcurrency = events['maxConcurrency']\n  maxErrors = events['maxErrors']\n  accountId = events['accountId']\n  package = events['package']\n  distributionDetails = {}\n  \n  distributionDetails['InstanceId'] = [instanceId]\n  distributionDetails['action'] = [action]\n  distributionDetails['installationType'] = [installationType]\n  distributionDetails['AutomationAssumeRole'] = [automationAssumeRole]\n  \n  if not version:\n    print('No version specified')\n  else:\n    distributionDetails['version'] = [version]\n    \n  if not additionalArguments:\n    print('No additional arguments specified')\n  else:\n    distributionDetails['additionalArguments'] = [additionalArguments]\n  \n  \n  for tr in targetRegions:\n    name = 'arn:aws:ssm:'+tr+':'+accountId+':document/'+package\n    distributionDetails['name'] = [name]\n    response = client.start_automation_execution(\n      DocumentName=documentName,\n      Parameters=distributionDetails,\n      TargetParameterName='InstanceId',\n      Targets=targets,\n      TargetLocations=[\n        {\n          'Accounts': targetAccounts,\n          'Regions': [tr],\n          'TargetLocationMaxConcurrency': maxConcurrency,\n          'TargetLocationMaxErrors': maxErrors\n        }]\n    )\n          \n    if response['AutomationExecutionId']:\n      status = 'Document has been successfuly invoked. Check AutomationExecutionId - ' + response['AutomationExecutionId'] + ' for more details'\n    else:\n      status = 'Document was not invoked'\n      raise Exception(f'It appears that this step couldn\\'t be completed due to an unknown error. Please check the logs for more details') \n  \n  return {'message': status}",
+                "Script" : "import sys\nimport boto3\nimport json\nimport botocore\n\ndef script_handler(events, context):\n  client = boto3.client('ssm')\n  \n  automationAssumeRole = events['automationAssumeRole']\n  documentName = 'CSD-DistributeSoftwarePackage'\n  instanceId = events['instanceId']\n  action = events['action']\n  installationType = events['installationType']\n  version = events['version']\n  additionalArguments = events['additionalArguments']\n  targets = events['targets']\n  targetAccounts = events['targetAccounts']\n  targetRegions = events['targetRegions']\n  maxConcurrency = events['maxConcurrency']\n  maxErrors = events['maxErrors']\n  accountId = events['accountId']\n  package = events['package']\n  distributionDetails = {}\n  \n  distributionDetails['InstanceId'] = [instanceId]\n  distributionDetails['action'] = [action]\n  distributionDetails['installationType'] = [installationType]\n  distributionDetails['AutomationAssumeRole'] = [automationAssumeRole]\n  \n  if not version:\n    print('No version specified')\n  else:\n    distributionDetails['version'] = [version]\n    \n  if not additionalArguments:\n    print('No additional arguments specified')\n  else:\n    distributionDetails['additionalArguments'] = [additionalArguments]\n  \n  \n  for tr in targetRegions:\n    name = 'arn:aws:ssm:'+tr+':'+accountId+':document/'+package\n    distributionDetails['name'] = [name]\n    response = client.start_automation_execution(\n      DocumentName=documentName,\n      Parameters=distributionDetails,\n      TargetParameterName='InstanceId',\n      Targets=targets,\n      TargetLocations=[\n        {\n          'Accounts': targetAccounts,\n          'ExecutionRoleName': 'CSD-SystemsManager-AutomationExecutionRole',\n          'Regions': [tr],\n          'TargetLocationMaxConcurrency': maxConcurrency,\n          'TargetLocationMaxErrors': maxErrors\n        }]\n    )\n          \n    if response['AutomationExecutionId']:\n      status = 'Document has been successfuly invoked. Check AutomationExecutionId - ' + response['AutomationExecutionId'] + ' for more details'\n    else:\n      status = 'Document was not invoked'\n      raise Exception(f'It appears that this step couldn\\'t be completed due to an unknown error. Please check the logs for more details') \n  \n  return {'message': status}",
                 "InputPayload" : {
                   "instanceId" : "{{ InstanceId }}",
                   "action" : "{{ action }}",
@@ -279,16 +271,15 @@ Resources:
 
   AutomationAdministrationRole:
     Type: "AWS::IAM::Role"
-    Condition: CreateSystemsManagerRoles
     Properties:
       Path: "/"
-      RoleName: "AWS-SystemsManager-AutomationAdministrationRole"
+      RoleName: "CSD-SystemsManager-AutomationAdministrationRole"
       AssumeRolePolicyDocument: >-
         {"Version":"2012-10-17","Statement":[{"Sid":"","Effect":"Allow","Principal":{"Service":"ssm.amazonaws.com"},"Action":"sts:AssumeRole"}]}
       MaxSessionDuration: 3600
       ManagedPolicyArns: 
       - "arn:aws:iam::aws:policy/service-role/AmazonSSMAutomationRole"
-      Description: "AWS-SystemsManager-AutomationAdministrationRole"
+      Description: "CSD-SystemsManager-AutomationAdministrationRole"
       Policies:
         - PolicyName: AutomationAdministrationPolicy
           PolicyDocument:
@@ -312,15 +303,14 @@ Resources:
               - Effect: Allow
                 Action:
                   - 'sts:AssumeRole'
-                Resource: !Sub 'arn:aws:iam::*:role/AWS-SystemsManager-AutomationExecutionRole'
+                Resource: !Sub 'arn:aws:iam::*:role/CSD-SystemsManager-AutomationExecutionRole'
               - Effect: Allow
                 Action:
                   - 'iam:PassRole'
-                Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/AWS-SystemsManager-AutomationAdministrationRole'
+                Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/CSD-SystemsManager-AutomationAdministrationRole'
   
   StackSetAdministrationRole:
     Type: 'AWS::IAM::Role'
-    Condition: CreateCloudFormationStackSetRoles
     Properties:
       Path: /
       RoleName: CSD-CloudFormation-StackSetAdministrationRole
@@ -346,7 +336,6 @@ Resources:
   
   StackSetExecutionRole:
     Type: 'AWS::IAM::Role'
-    Condition: CreateCloudFormationStackSetRoles
     Properties:
       Path: /
       RoleName: CSD-CloudFormation-StackSetExecutionRole
@@ -356,7 +345,7 @@ Resources:
           - Effect: Allow
             Principal:
               AWS:
-                - !Sub "arn:aws:iam::${ManagementAccountId}:root"
+                - !If [IsDelegatedAdministrator,!Sub "arn:aws:iam::${DelegatedAdminAccountId}:root",!Sub "arn:aws:iam::${ManagementAccountId}:root"]
             Action:
               - sts:AssumeRole
       Policies:
@@ -386,16 +375,16 @@ Resources:
   
   AutomationExecutionRoleStackSet:
     Type: AWS::CloudFormation::StackSet
-    Condition: CreateSystemsManagerRoles
     Properties:
       AutoDeployment:
         Enabled: true
         RetainStacksOnAccountRemoval: false
-      StackSetName: AWS-SystemsManagerAutomationExecutionRole
+      CallAs: !If [IsDelegatedAdministrator,DELEGATED_ADMIN,SELF] 
+      StackSetName: CSD-SystemsManagerAutomationExecutionRole
       Parameters:
         - 
-          ParameterKey: ManagementAccountId
-          ParameterValue: !Ref ManagementAccountId
+          ParameterKey: AccountId
+          ParameterValue: !If [IsDelegatedAdministrator,!Ref DelegatedAdminAccountId,!Ref ManagementAccountId]
       PermissionModel: SERVICE_MANAGED
       Capabilities: 
         - CAPABILITY_IAM
@@ -407,21 +396,21 @@ Resources:
             OrganizationalUnitIds: !Ref DeploymentTargets 
       TemplateBody: |
         Parameters:
-          ManagementAccountId:
-            Description: (Required) AWS Organization Management account ID.
+          AccountId:
+            Description: (Required) Account ID where the CSD solution is being deployed (AWS Organization Management or delegated admin).
             Type: String
             Default: '123456789012'
         Resources:
           AutomationExecutionRole:
             Type: 'AWS::IAM::Role'
             Properties:
-              RoleName: AWS-SystemsManager-AutomationExecutionRole
+              RoleName: CSD-SystemsManager-AutomationExecutionRole
               AssumeRolePolicyDocument:
                 Version: 2012-10-17
                 Statement:
                   - Effect: Allow
                     Principal:
-                      AWS: !Ref ManagementAccountId
+                      AWS: !Ref AccountId
                     Action:
                       - 'sts:AssumeRole'
                   - Effect: Allow
@@ -453,4 +442,4 @@ Resources:
                         Action:
                           - 'iam:PassRole'
                         Resource: !Sub >-
-                          arn:${AWS::Partition}:iam::${AWS::AccountId}:role/AWS-SystemsManager-AutomationExecutionRole
+                          arn:${AWS::Partition}:iam::${AWS::AccountId}:role/CSD-SystemsManager-AutomationExecutionRole
