Support for delegated administrator

--- a/Automation/CSD-AddSoftwarePackageToDistributor.yaml
+++ b/Automation/CSD-AddSoftwarePackageToDistributor.yaml
@@ -280,6 +280,7 @@ mainSteps:
               TargetLocations=[
                 {
                   'Accounts': targetAccounts,
+                  'ExecutionRoleName': 'CSD-SystemsManager-AutomationExecutionRole',
                   'Regions': [tr],
                   'TargetLocationMaxConcurrency': maxConcurrency,
                   'TargetLocationMaxErrors': maxErrors
