--- a/CloudFormation/template.yaml
+++ b/CloudFormation/template.yaml
@@ -41,7 +41,7 @@ Parameters:
     - 'false'
     Description: Specify if this solution is being deployed in a delegated adminstrator account. With this option you no longer need to be logged into the AWS Organizations management account to administer software package distribution.
   DeploymentTargets:
-    Description: Specify the AWS OrganizationalUnitIds and/or the AWS account IDs that you want the solution to target, for eg. ou-abc1-abc12ab1,123456789012
+    Description: Specify AWS account IDs and/or the organizational unit IDs within AWS Organization whose accounts have the target instances (e.g., ou-abcd-1qwert43, 123456789123) for distribution
     Type: CommaDelimitedList
   TargetKey:
     Type: String
