--- a/Automation/CSD-AddSoftwarePackageToDistributor.yaml
+++ b/Automation/CSD-AddSoftwarePackageToDistributor.yaml
@@ -193,7 +193,7 @@ mainSteps:
                   if additionResponse['ResponseMetadata']:
                     if additionResponse['ResponseMetadata']['HTTPStatusCode'] == 200:
                       #print(f'Successfully modified '+package+' permissions to be shared with these accounts: '+','.join(newAccount))
-                      print(f'Successfully modified '+package+' permissions to be shared with '+','.join(str(len(newAccount)))+' accounts')
+                      print(f'Successfully modified '+package+' permissions to be shared with '+str(len(newAccount))+' accounts')
                     else:
                       raise Exception(f'There was a problem modifying the permissions of '+package+', check the logs for more details')
                   else:
