--- a/Automation/CSD-AddSoftwarePackageToDistributor.yaml
+++ b/Automation/CSD-AddSoftwarePackageToDistributor.yaml
@@ -23,7 +23,7 @@ parameters:
     type: String
     allowedPattern: '^arn:[a-z0-9][-.a-z0-9]{0,62}:[a-z0-9][-.a-z0-9]{0,62}:([a-z0-9][-.a-z0-9]{0,62})?:([a-z0-9][-.a-z0-9]{0,62})?:(package|document)\/[a-zA-Z0-9/:.\-_]{1,128}$|^[a-zA-Z0-9/:.\-_]{1,128}$'
   version:
-    description: '(Required) The version of the package to install or uninstall. If you don't specify a version, the system installs the latest published version by default. The system will only attempt to uninstall the version that is currently installed. If no version of the package is installed, the system returns an error.'
+    description: '(Required) The version of the package to install or uninstall. The system will only attempt to uninstall the version that is currently installed. If no version of the package is installed, the system returns an error.'
     type: String
     default: ''
   additionalArguments:
@@ -233,6 +233,7 @@ mainSteps:
         bucketName: '{{ bucketName }}'
         bucketPrefix: '{{ bucketPrefix }}'
         name: '{{ name }}'
+        version : '{{ version }}'
         region: '{{global:REGION}}'
         accountId: '{{global:ACCOUNT_ID}}'
         targetAccounts: '{{ targetAccounts }}'
